--- a/index.html
+++ b/index.html
@@ -15,4 +15,4 @@
     <li>シャオシャオの欲しいものはなんでも買う！</li>
     <li>シャオシャオは心の中にいつもいる。</li>
 </div>
-    <body background="file:///Users/tsubakinokanji/Desktop/oar2.jpg">～</body>
+    <body background="file:///Users/tsubakinokanji/Desktop/oar2.jpg"/body>
