--- a/index.html
+++ b/index.html
@@ -15,4 +15,4 @@
     <li>シャオシャオの欲しいものはなんでも買う！</li>
     <li>シャオシャオは心の中にいつもいる。</li>
 </div>
-    <body background="file:///Users/tsubakinokanji/Desktop/oar2.jpg"/body>
+    <body background="https://github.com/test10311111/https-test10311.github.io/blob/main/oar2.jpg?raw=true"/body>
